Auto publish bintray artifact on upload

--- a/build.gradle
+++ b/build.gradle
@@ -148,6 +148,7 @@ bintray {
     user = System.getProperty('bintray.user')
     key = System.getProperty('bintray.key')
     publications = ['mavenPublication']
+    publish = true
 
     pkg {
         repo = "$kutnaCommonArtifactId"
