--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     ext {
-        kutnaCommonGroupId = 'com.chadmarchand'
+        kutnaCommonGroupId = 'com.chadmarchand.kutna'
         kutnaCommonArtifactId = 'kutna-common'
         kutnaCommonVersion = '1.0.14'
         kutnaCommonVcsRepoUrl = 'https://github.com/chadmarchand/kutna-common.git'
