--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,20 @@
-# This workflow runs the 
+# This workflow runs the tests
 
 name: CI
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request
   push:
   pull_request:
-
-  # Allows the workflow to be run from the Actions tab in Github
   workflow_dispatch:
 
 jobs:
   test:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Check out the repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v2
 
-      # Runs the tests
+      # Run the tests
       - name: Run tests
         run: ./gradlew test
